<resources>
    <string name="app_name">Waifu Viewer</string>
    <string name="waifu_viewer">Waifu Viewer</string>

    <string name="is_first_time">first_time</string>
    <string name="download_image">Download image</string>
    <string name="permission_request">Se Requiere el permiso para guardar la imagen en el dispositivo</string>
    <string name="ok_text">OK</string>
    <string name="gif_content">GIF</string>
    <string name="portrait_default">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="nsfw_content">NSFW</string>
    <string name="sfw_content">SFW</string>
    <string name="server_mode">Server Mode</string>
    <string name="server_normal">Normal Mode</string>
    <string name="server_enhanced">Enhanced Mode</string>
    <string name="server_best">Nekos Mode</string>
    <string name="server_toast_holder">Mode Server</string>
    <string name="server_normal_toast">IM</string>
    <string name="server_enhanced_toast">PICS</string>
    <string name="server_best_toast">NEKOS</string>
    <string name="server_unknown_toast">Unknown</string>
    <string name="no_waifu_found">No waifu found :( Try again later</string>
    <string name="waifu_image_saved">Imagen Guardada</string>
    <string name="waifu_error">Waifu Request Error</string>
    <string name="connectivity_error">Connection Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_mode">Unknown Mode </string>
    <string name="give_me_waifus">Give me Waifus!</string>
    <string name="require_connection">Se requiere conexion para funcionar</string>
    <string name="function_not_implemented">Not implemented yet!</string>

    <string name="tag_waifu">waifu</string>
    <string name="tag_ecchi">ecchi</string>
    <string name="tag_neko">neko</string>
    <string name="tag_pat">happy</string>
    <string name="categories">All Categories</string>
    <string name="categories_items">All Items</string>
    <string name="categories_items_empty">Selecciona una categoría</string>

    <string name="waifus_gone">Some waifus are gone</string>
    <string name="waifus_favorites_gone">Some Favorite waifus are gone. Are you sure?</string>
    <string name="waifu_deleted">Waifu Deleted!</string>
    <string name="waifu_favorite_delete">Delete All Favorites no implemented yet. Try Long Press on a waifu</string>
    <string name="waifus_coming">More Waifus are coming</string>
    <string name="waifus_loading">Loading Waifus</string>
    <string name="waifus_size">Total Waifus = </string>
    <string name="waifus_content">Here is shown some waifus</string>
    <string name="waifus_detail_downloading">Descargando…</string>
    <string name="waifus_updates_downloading">Descargando actualización…</string>
    <string name="waifus_permissions_content">Debes aceptar el permiso para usar esta funcion</string>
    <string name="waifus_permissions_location">El permiso de localizacion es opcional para usar una caracteristica.</string>
    <string name="waifus_permissions_push">Debes aceptar el permiso de notificaciones para recibir los avisos</string>

    <string name="server_normal_string">normal</string>
    <string name="server_enhanced_string">enhanced</string>
    <string name="server_nekos_string">nekos</string>
    <string name="server_favorite_string">favorite</string>
    <string name="server_waifu_gpt_string">waifu_gpt</string>
    <string name="image_description">Descripcion de una imagen</string>

    <string name="favorite_delete_title">¿Quieres eleminar todas tus waifus?</string>
    <string name="favorite_delete_subtitle">Estas Seguro? </string>
    <string name="favorite_delete_accept">No Quiero Waifus</string>
    <string name="favorite_delete_deny">Conservar</string>

    <string name="dialog_search_title">¿Quieres buscar refencias sobre el origen de tu waifu?</string>
    <string name="dialog_search_subtitle">La busqueda avanzada tardara unos segundos…</string>
    <string name="dialog_search_accept">Buscar Waifu</string>
    <string name="dialog_search_deny">Cancelar Busqueda</string>

    <string name="dialog_update_title">Hay una actualización</string>
    <string name="dialog_update_subtitle">Se recomienda actualizar la aplicación.</string>
    <string name="dialog_update_local_version">Tu Version:</string>
    <string name="dialog_update_latest_version">Última Version Lanzada:</string>
    <string name="dialog_update_accept">Actualizar</string>
    <string name="dialog_update_download_base_link">https://github.com/LuisMackenzie/Waifu-Viewer/releases/download/v</string>
    <string name="dialog_update_download_debug_file_name">/app-debug.apk</string>
    <string name="dialog_update_download_release_file_name">/app-release.apk</string>
    <string name="dialog_update_download_enhanced_file_name">/app-enhanced.apk</string>

    <!-- Gemini Menu strings -->
    <string name="menu_summarize_title">Generar texto desde un Input de texto</string>
    <string name="menu_summarize_description">App de ejemplo que resume texto</string>
    <string name="menu_reason_title">Genera respuesta desde un texto y una imagen (multimodal)</string>
    <string name="menu_reason_description">App de ejemplo para subir imagenes y preguntar sobre ellas.</string>
    <string name="menu_chat_title">Conversaciones Multiturno (chat)</string>
    <string name="menu_chat_description">App de ejemplo que muestra una UI conversacional</string>
    <string name="action_try">Hablar con Waifu</string>
    <string name="action_go">Ir</string>
    <!-- Summarize sample strings -->
    <string name="summarize_label">Texto</string>
    <string name="summarize_hint">Introduce el texto a resumir</string>
    <!-- Photo Reasoning sample strings -->
    <string name="reason_label">Pregunta</string>
    <string name="reason_hint">Subir una imagen y entoces preguntar</string>
    <string name="add_image">Añadir Imagen</string>
    <!-- Chat sample strings -->
    <string name="chat_label">Mensaje</string>
    <string name="action_send">Enviar</string>

    <string name="default_notification_channel_id">notification_channel</string>
    <string name="default_notification_name_id">com.mackenzie.waifuviewer</string>


</resources>