<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.mackenzie.waifuviewer.domain.WaifuPicItem"/>
        <import type="com.mackenzie.waifuviewer.domain.WaifuImItem"/>
        <import type="com.mackenzie.waifuviewer.domain.ServerType"/>
        <import type="com.mackenzie.waifuviewer.ui.main.OnChooseTypeChanged"/>
        <variable name="waifuPic" type="WaifuPicItem" />
        <variable name="waifuIm" type="WaifuImItem"/>
        <variable name="type" type="ServerType" />
        <variable name="onChooseTypeChanged" type="OnChooseTypeChanged" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectorFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/title_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waifu_viewer"
        android:textSize="48sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/c_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true"
        app:onChooseTypeChanged="@{onChooseTypeChanged}">

        <com.google.android.material.chip.Chip
            android:id="@+id/c_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/chip_bg_states"
            android:clickable="@{type != ServerType.NORMAL}"
            android:checked="@{type == ServerType.NORMAL}"
            android:textColor="@{type == ServerType.NORMAL ? @color/white : @color/black}"
            android:text="@string/server_normal" />

        <com.google.android.material.chip.Chip
            android:id="@+id/c_enhanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/chip_bg_states"
            android:clickable="@{type != ServerType.ENHANCED}"
            android:checked="@{type == ServerType.ENHANCED}"
            android:textColor="@{type == ServerType.ENHANCED ? @color/white : @color/black}"
            android:text="@string/server_enhanced" />

        <com.google.android.material.chip.Chip
            android:id="@+id/c_nekos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/chip_bg_states"
            android:clickable="@{type != ServerType.NEKOS}"
            android:checked="@{type == ServerType.NEKOS}"
            android:textColor="@{type == ServerType.NEKOS ? @color/white : @color/black}"
            android:text="@string/server_best" />
    </com.google.android.material.chip.ChipGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_waifu" />

    <Button
        android:id="@+id/btn_waifu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_me_waifus"
        android:backgroundTint="@color/purple_200"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/simple_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/s_gifs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/gif_content"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/s_nsfw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/sfw_content"
            android:textColor="@color/white"
            android:visibility="gone"
            app:trackTint="@color/purple_500" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/s_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/portrait_default"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/download_image"
        android:focusable="true"
        android:src="@drawable/ic_baseline_update"
        style="@style/Theme.AppCompat.DayNight"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/favorites"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/download_image"
        android:focusable="true"
        android:src="@drawable/ic_favorite_off"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>